k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivereats
  labels:
    app: delivereats
    project: sa-proyecto-201346084
